[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zcx"
version = "1.0.1"
description = "MongoDB 命令行管理工具"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["mongodb", "cli", "tool"]
authors = [
    { name = "colamps", email = "colampszcx@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "pymongo>=4.0",
    "happy-python",
]

[project.urls]
Repository = "https://github.com/Zcxx0322/mongodb-tool"

[project.scripts]
zcx = "zcx.main:main"

[tool.hatch.build.targets.wheel]
packages = ["zcx"]
